<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" android:padding="16dp">

        <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TableRow android:layout_width="match_parent" android:layout_height="match_parent"
                      android:layout_marginBottom="5dp">
                <TextView
                        android:text="@string/team_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textView4"/>
                <TextView
                        android:text=":"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textView13"
                        android:layout_marginRight="2dp" android:layout_marginLeft="2dp"/>
                <TextView
                        android:id="@+id/teamName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold"
                />
            </TableRow>
            <TableRow android:layout_width="match_parent" android:layout_height="match_parent"
                      android:layout_marginBottom="5dp">
                <TextView
                        android:text="@string/team_formed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textView14"/>
                <TextView
                        android:text=":"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textView15"
                        android:layout_marginLeft="2dp" android:layout_marginRight="2dp"/>
                <TextView
                        android:id="@+id/tvFormedYear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold"/>
            </TableRow>
            <TableRow android:layout_width="match_parent" android:layout_height="match_parent"
                      android:layout_marginBottom="5dp">
                <TextView
                        android:text="@string/team_manager"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textView16"/>
                <TextView
                        android:text=":"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textView17"
                        android:layout_marginLeft="2dp" android:layout_marginRight="2dp"/>
                <TextView
                        android:id="@+id/tvManager"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold"/>
            </TableRow>
            <TableRow android:layout_width="match_parent" android:layout_height="match_parent"
                      android:layout_marginBottom="5dp">
                <TextView
                        android:text="@string/team_stadium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textView18"/>
                <TextView
                        android:text=":"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textView20"
                        android:layout_marginLeft="2dp" android:layout_marginRight="2dp"/>
                <TextView
                        android:id="@+id/tvStadium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold"/>
            </TableRow>
        </TableLayout>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/team_ovw"/>
        <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="4dp"
                android:id="@+id/ovwContainer">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvManager"
                    android:orientation="vertical"
                    android:padding="8dp">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:id="@+id/tvOverview"
                        android:textSize="13sp"
                        android:layout_marginRight="2dp"
                        android:layout_marginLeft="2dp"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>